reorder client list for desktop and fix spacing of logos

--- a/src/assets/css/client-list.css
+++ b/src/assets/css/client-list.css
@@ -1,28 +1,22 @@
 @media only screen and (min-width: 928px) {
   /* Parent Grid Container */
-  .parent {
-    display: grid;
-    justify-content: center;
-    grid-template-columns: repeat(6, 1fr);
-  }
-
   .grid {
     display: grid;
-    justify-content: center;
     grid-template-columns: repeat(6, 1fr);
   }
 
-  /* Client Logo: IgadI*/
+  /* Client Logo: Hot Dish Honey */
   .div1 {
     grid-area: 1 / 1 / 3 / 3;
     justify-content: center;
     width: 200px;
   }
 
-  /* Client Logo: Wolfpac Cannabis */
+  /* Client Logo: Lil Pink's Pastries */
   .div2 {
     padding-top: 12pt;
     padding-left: 12pt;
+    padding-right: 24pt;
     grid-area: 1 / 3 / 3 / 5;
     justify-content: center;
   }
@@ -35,13 +29,13 @@
     justify-content: center;
   }
 
-  /* Client Logo: Lil Pink's Pastries */
+  /* Client Logo: Wolfpac Cannabis */
   .div4 {
     grid-area: 3 / 2 / 5 / 4;
     justify-content: center;
   }
 
-  /* Client Logo: Hot Dish Honey */
+  /* Client Logo: IgadI */
   .div5 {
     grid-area: 3 / 4 / 5 / 6;
     justify-content: center;
